Got things to compile with new C++ style

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,7 @@
 PROJECT(jrpc)
 
 add_library(jrpc SHARED
-    debug.c
-    sockets.c
-    jrpc_proxy
-    jrpc_server.c
-    message.c
+    proxy
 )
 target_include_directories (jrpc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
