--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,4 +3,6 @@ add_executable(test_rpc
     test_rpc
 )
 
-target_link_libraries(test_rpc jrpc)
+target_compile_options(test_rpc PRIVATE -std=c++11 -pthread)
+
+target_link_libraries(test_rpc jrpc pthread)
