Service framework and kind of parsing messages

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,17 @@
-PROJECT(jrpc)
+PROJECT(mrpc)
 
-add_library(jrpc SHARED
+add_library(mrpc SHARED
     proxy
     node
     transport
     socket_transport
+    message
+    routing
+    service
+    path
 )
-target_include_directories (jrpc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (mrpc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(jrpc jsoncpp_lib_static)
+target_link_libraries(mrpc jsoncpp_lib_static)
 
-target_compile_options(jrpc PRIVATE -std=c++11 -pthread)
+target_compile_options(mrpc PRIVATE -std=c++11 -pthread)
