--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,4 +5,4 @@ add_executable(test_rpc
 
 target_compile_options(test_rpc PRIVATE -std=c++11 -pthread)
 
-target_link_libraries(test_rpc jrpc pthread)
+target_link_libraries(test_rpc mrpc pthread)
