--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=MRPCPOJF
-version=0.0.1
-author=Arduino
+name=ESP8266MRPC
+version=0.1
+author=Alex Sherman
 maintainer=Alex Sherman <asherman1024@gmail.com>
-sentence=An RPC framework
-paragraph=herp
+sentence=Mesh RPC framework
 category=Communication
+paragraph=An RPC framework for the ESP8266 which provides simple mechanisms to develop mesh-based RPC systems.
 url=no
 architectures=*
 includes=src/mrpc.h
